<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<androidx.appcompat.widget.Toolbar
				android:id="@+id/search_toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent">

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent" android:id="@+id/relativeLayout"
					tools:layout_editor_absoluteX="16dp">

				<ImageView
						android:id="@+id/go_back_button"
						android:layout_marginTop="38dp"
						android:layout_marginEnd="24dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/ic_arrow_back"
						android:layout_alignParentStart="true"/>

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="32dp"
						android:layout_marginStart="48dp"
						android:text="Book"
						android:textStyle="bold"
						android:textColor="@color/design_default_color_on_secondary"
						android:textSize="32sp"/>
			</RelativeLayout>

		</androidx.appcompat.widget.Toolbar>


		<ProgressBar
				android:id="@+id/progress_bar_detail_book"
				android:layout_width="32dp"
				android:layout_height="32dp"
				android:translationZ="2dp"
				android:visibility="invisible" android:layout_centerHorizontal="true" android:layout_centerVertical="true"
				android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/search_toolbar"
				android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
				android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/detail_book_info_container"
				android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/search_toolbar"/>

		<ImageView
				android:id="@+id/detail_book_image"
				android:layout_width="300dp"
				android:layout_height="350dp"
				android:layout_marginEnd="8dp"
				app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="8dp" android:layout_marginTop="8dp"
				app:layout_constraintTop_toBottomOf="@+id/search_toolbar"/>

		<LinearLayout
				android:id="@+id/detail_book_info_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				tools:layout_editor_absoluteX="16dp"
				app:layout_constraintTop_toBottomOf="@+id/detail_book_image">

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp">

				<TextView
						android:id="@+id/detail_book_title_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/detail_title"
						android:layout_alignParentStart="true"
						android:textStyle="bold"
						android:textSize="16sp"/>

				<TextView
						android:id="@+id/detail_book_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="SampleText"
						android:layout_alignParentEnd="true"
						android:layout_toEndOf="@+id/detail_book_title_text"
						android:layout_marginStart="16dp"
						android:gravity="end"/>

			</RelativeLayout>

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="8dp">

				<TextView
						android:id="@+id/detail_book_subtitle_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/detail_subtitle"
						android:layout_alignParentStart="true"
						android:textStyle="bold"
						android:textSize="16sp"/>

				<TextView
						android:id="@+id/detail_book_subtitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="SampleText"
						android:layout_alignParentEnd="true"
						android:layout_toEndOf="@+id/detail_book_subtitle_text"
						android:layout_marginStart="16dp"
						android:gravity="end"/>

			</RelativeLayout>

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="8dp">

				<TextView
						android:id="@+id/detail_book_author_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/detail_author"
						android:layout_alignParentStart="true"
						android:textStyle="bold"
						android:textSize="16sp"/>

				<TextView
						android:id="@+id/detail_book_author"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="SampleText"
						android:layout_alignParentEnd="true"
						android:layout_toEndOf="@+id/detail_book_author_text"
						android:layout_marginStart="16dp"
						android:gravity="end"/>

			</RelativeLayout>

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="8dp">

				<TextView
						android:id="@+id/detail_book_publisher_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/detail_publisher"
						android:layout_alignParentStart="true"
						android:textStyle="bold"
						android:textSize="16sp"/>

				<TextView
						android:id="@+id/detail_book_publisher"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="SampleText"
						android:layout_alignParentEnd="true"
						android:layout_toEndOf="@+id/detail_book_publisher_text"
						android:layout_marginStart="16dp"
						android:gravity="end"/>

			</RelativeLayout>

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="8dp">

				<TextView
						android:id="@+id/detail_book_language_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/detail_language"
						android:layout_alignParentStart="true"
						android:textStyle="bold"
						android:textSize="16sp"/>

				<TextView
						android:id="@+id/detail_book_language"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="SampleText"
						android:layout_alignParentEnd="true"
						android:layout_toEndOf="@+id/detail_book_language_text"
						android:layout_marginStart="16dp"
						android:gravity="end"/>

			</RelativeLayout>

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="8dp">

				<TextView
						android:id="@+id/detail_book_description_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/detail_description"
						android:layout_alignParentStart="true"
						android:textStyle="bold"
						android:textSize="16sp"/>

				<TextView
						android:id="@+id/detail_book_description"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="SampleText"
						android:layout_alignParentEnd="true"
						android:layout_toEndOf="@+id/detail_book_description_text"
						android:layout_marginStart="16dp"
						android:gravity="end"/>

			</RelativeLayout>

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="8dp">

				<TextView
						android:id="@+id/detail_book_price_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/detail_price"
						android:layout_alignParentStart="true"
						android:textStyle="bold"
						android:textSize="16sp"/>

				<TextView
						android:id="@+id/detail_book_price"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="SampleText"
						android:layout_alignParentEnd="true"
						android:layout_toEndOf="@+id/detail_book_price_text"
						android:layout_marginStart="16dp"
						android:gravity="end"/>

			</RelativeLayout>

			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="8dp">

				<TextView
						android:id="@+id/detail_book_year_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/detail_year"
						android:layout_alignParentStart="true"
						android:textStyle="bold"
						android:textSize="16sp"/>

				<TextView
						android:id="@+id/detail_book_year"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="SampleText"
						android:layout_alignParentEnd="true"
						android:layout_toEndOf="@+id/detail_book_year_text"
						android:layout_marginStart="16dp"
						android:gravity="end"/>

			</RelativeLayout>

		</LinearLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>